      + Fix possible crash in copy_term/2 etc. on 32-bit systems.
      + Avoid import messages from module user in saved states.
    - New features:
      + library(terms) for enhanced compatibility to YAP/Quintus/SICStus.
      + Use PceEmacs as default editor if XPCE is available.
      + zcompare/3, analogous to compare/3 for FD variables.
      + constraint element/3, analogous to nth/1.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 07 Aug 2008 13:58:33 +0100

swi-prolog (5.6.58-2) unstable; urgency=low

  * Fix regression when moving from dh_movefiles to dh_install. dh_install
    only copies the specifies files whilst dh_movefiles moves them - this was
    resulting in the contents of the binary "swi-prolog" package being
    duplicated inside "swi-prolog-xpce", causing file conflicts at
    installation. (Closes: #492364)
  * Don't build the CHR package on arm and armel to prevent FTBFS on these
    archictures.
  * Add 04_fix_hyphens_being_used_as_minus_signs_in_manpages.dpatch to fix
    hyphen issues in manpages.
  * Build-Depend on debhelper (>= 5) instead of (>= 5.0.0).
  * Add "no-symbols-control-file" override to the shared-library related
    lintian overrides.
  * Actually remove dbuild ".pwd" file - was not being deleted since
    5.6.47-1 or so.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 25 Jul 2008 22:59:28 +0100

swi-prolog (5.6.58-1) unstable; urgency=low

  * New upstream release.
  * Fix GCC flag handling as SWI-Prolog prefers COFLAGS over CFLAGS:
    - Unset CFLAGS to allow upstream build system to select optimisations.
    - Should fix FTBFS on arm as -O0 is passed properly (introduced in
      5.6.49-1).
  * Fix typo ("polution" -> "pollution") in README.Debian.
  * Replace calls to `pwd` in debian/rules with $(CURDIR).
  * Move from dh_movefiles to dh_install.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Tue, 22 Jul 2008 21:34:25 +0100

swi-prolog (5.6.57-1) unstable; urgency=low

  * New upstream release.