@@ -21,6 +21,7 @@ swi-prolog (5.6.59-1) unstable; urgency=low
       + Use PceEmacs as default editor if XPCE is available.
       + zcompare/3, analogous to compare/3 for FD variables.
       + constraint element/3, analogous to nth/1.
+  * Build CHR on arm and armel again after GC fixes (disabled in 5.6.58-2).
 
  -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 07 Aug 2008 13:58:33 +0100
 
